[package]
name = "interceptor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
reqwest = { version = "0.11.10", features = ["json"] }
common = { path = "../common" }
serde_json = "1.0.68"